simple-service-entry/ping.yml
apiVersion: v1
kind: Pod
metadata:
  name: svc-in-mesh
spec:
  containers:
  - name: bash-ctr
    image: bash:4.4
    command: ["ping"]
    args: ["www.google.com"]
  restartPolicy: OnFailure
